@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-11435.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-11454.tgz',
      'xapian-core.tgz',
-     'e7d0512dcfced9dabf40a4e777c288462450f005',
+     'e5ec0470cc68fd9409a379d63c63872096cab17c',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-11435.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-11454.tgz',
      'xapian-bindings.tgz',
-     '3a7a355f7a60dacc60cd2838cdf8743c363c63c5',
+     'a0a5d0848156ef3948f09aae9d84ef87b1e1c29a',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-11435.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-11454.tgz',
      'win32msvc.tgz',
-     'a9cf69c3c121d26b4274867b35b50a77b63d982b',
+     'c7ce370464c416f28efb238eda5b45c7d82b9dc0',
      'xapian-core/win32',
     ),
 )
