@@ -1,3 +1,7 @@
+Sun Sep 28 15:52:10 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Update to use new packages.
+
 Fri Sep 26 04:25:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Updated xapian packages.
